Fix: Projects section width and make desktop nav sticky on mobile.
- Added CSS rules to prevent the projects section from overflowing on the x-axis.
- Updated media queries to make the desktop navigation sticky on mobile devices.
- Adjusted footer styles for better alignment and responsiveness.- Updated image references and added new profile picture.
- Improved layout and wrapping for various sections on smaller screens.

--- a/media-queries.css
+++ b/media-queries.css
@@ -10,13 +10,14 @@
 
 @media screen and (max-width: 1200px) {
   #desktop-nav {
-    display: none;
+    display: flex;
   }
   #hamburger-nav {
-    display: flex;
+    display: none;
   }
   #skills,
   #about,
+  #projects,
   .skills-details-container {
     margin-top: 2rem;
   }
@@ -33,6 +34,7 @@
   }
   section {
     margin: 0 5%;
+    width: 100vw;
   }
   .section-pic-container {
     width: 275px;
@@ -45,6 +47,11 @@
   .about-pic {
     width: 60vw;
   }
+  .about-container,
+  .contact-info-upper-container,
+  .btn-container {
+    flex-wrap: wrap;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -54,8 +61,20 @@
 }
 
 @media screen and (max-width: 600px) {
-  #contact,
+  #desktop-nav {
+    display: none;
+  }
+  #hamburger-nav {
+    display: flex;
+  }
   footer {
+    height: auto;
+    justify-content: end;
+  }
+  footer nav {
+    display: none;
+  }
+  #contact {
     height: 40vh;
   }
   #profile {
@@ -95,6 +114,9 @@
     gap: 0.5rem;
     text-align: center;
   }
+  section {
+    padding-top: 12vh;
+  }
   .section-pic-container {
     width: auto;
     height: 46vw;
@@ -111,5 +133,11 @@
   }
   .about-pic {
     width: 46vw;
+  }
+  #hamburger-nav {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background: white;
   }
 }
