--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 
 body {
   font-family: "Poppins", arial;
+  position: relative;
 }
 
 html {
@@ -26,16 +27,22 @@ a, .btn {
 }
 
 /* DESKTOP NAV */
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* padding: 0 7vw; */
+}
 
 nav, .nav-links {
   display: flex;
 }
 
-nav {
-  justify-content: space-around;
+/* nav {
+  justify-content: space-between;
   align-items: center;
   height: 17vh;
-}
+} */
 
 .nav-links {
   gap: 2rem;
@@ -57,13 +64,13 @@ a:hover {
 }
 
 .logo {
-  font-size: 2rem;
+  height: auto;
 }
 
 #gh-logo {
-  height: 3.5rem;
-  width: 12rem;
-  object-fit: contain;
+  height: 5.5rem;
+  /* width: 2rem; */
+  /* object-fit: contain; */
 }
 
 .logo:hover {
@@ -105,6 +112,7 @@ a:hover {
   max-height: 0;
   overflow: hidden;
   transition: all;
+  z-index: 100;
 }
 
 .menu-links a {
@@ -162,6 +170,7 @@ a:hover {
 section {
   padding-top: 4vh;
   min-height: 96vh;
+  max-width: 100vw;
   margin: 0 10rem;
   box-sizing: border-box;
   position: relative;
@@ -378,12 +387,16 @@ article .icon {
 
 #projects {
   position: relative;
+  /* width: 100%;
+  box-sizing: border-box;
+  padding: 0 2rem;
+  overflow-x: hidden; */
 }
 
-.color-container {
+/* .color-container {
   border-color: rgb(163, 163, 163);
   background: white;
-}
+} */
 
 .project-img {
   margin-top: 5rem;
@@ -468,13 +481,21 @@ article .icon {
 /* FOOTER */
 
 footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 26vh;
-  margin: auto;
+  width: 100%;
+  /* margin: auto; */
   position: absolute;
   bottom: 0;
-  align-self: center;
+  left: 0;
+  align-items: center;
 }
 
 footer p {
   text-align: center;
+  background-color: rgb(53, 53, 53);
+  color: white;
+  width: 100%;
 }
